--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>10 March 2003</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://roro1839.github.io/MY_portfolioaboutme</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+2547 1925 2546</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Nairobi, Kenya</span></li>
                 </ul>
