--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <a href="https://x.com/Roro65bm" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="https://www.facebook.com/ronaldo.kips.146/" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="#https://www.instagram.com/ronaldokips90/" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="https://github.com/Roro1839" class="google-plus"><i class="bx bxl-github"></i></a>
+          <a href="https://github.com/ronaldocheruiyot" class="google-plus"><i class="bx bxl-github"></i></a>
           <a href="https://www.linkedin.com/in/ronaldo-cheruiyot-059939266/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
@@ -658,5 +658,6 @@
   <script src="assets/js/main.js"></script>
 
 </body>
+
 
 </html>
