--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Ronaldo Cheruiyot</h1>
-      <p>I'm <span class="typed" data-typed-items="Backend_Engineer, Developer, Freelancer, FullStackengineer"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Backend_Engineer, Developer, Freelancer, FullStackengineer AI Enthusiast, Open-Source Contributor, Mentor, Microsoft Hackathon Finalist"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -661,3 +661,4 @@
 
 
 </html>
+
