--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Ronaldo Cheruiyot</h1>
-      <p>I'm <span class="typed" data-typed-items="Backend_Engineer, Developer, Freelancer, FullStackengineer, AI Enthusiast, Open-Source Contributor, Mentor, Microsoft Hackathon Finalist"></span>
+      <p>I'm <span class="typed" data-typed-items="Backend Engineer, Developer, Freelancer, Full Stack Engineer, AI Enthusiast, Open-Source Contributor, Mentor, Microsoft Hackathon Finalist"></span>
       </p>
     </div>
   </section><!-- End Hero -->
