--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Ronaldo Cheruiyot</h1>
-      <p>I'm <span class="typed" data-typed-items="Backend Engineer, Developer, Freelancer, Full Stack Engineer, AI Enthusiast, Open-Source Contributor, Mentor, Microsoft Hackathon Finalist"></span>
+      <p>I'm <span class="typed"
+          data-typed-items="Backend Engineer, Developer, Freelancer, Full Stack Engineer, AI Enthusiast, Open-Source Contributor, Mentor, Microsoft Hackathon Finalist"></span>
       </p>
     </div>
   </section><!-- End Hero -->
@@ -112,7 +113,9 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>10 March 2003</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong>
-                    <span>https://roro1839.github.io/MY_portfolioaboutme</span></li>
+                    <span><a href="https://ronaldocheruiyot.github.io/MY_portfolioaboutme" target="_blank">Click
+                        Here</a></span>
+                  </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+2547 1925 2546</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Nairobi, Kenya</span></li>
                 </ul>
@@ -123,7 +126,8 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Barchelor of Science in Applied
                       Computing</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong>
-                    <span>ronaldokipkirui90@gmail.com</span></li>
+                    <span>ronaldokipkirui90@gmail.com</span>
+                  </li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
